deploy/k8s/base/legacy-data-migration/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-data-migration
  labels:
    app.kubernetes.io/name: legacy-data-migration
spec:
  selector:
    app.kubernetes.io/name: legacy-data-migration
  ports:
    - name: technical
      port: 9090
      targetPort: technical
